<!-- https://github.com/MrCodeFan/MobYardAndroid -->
<resources>
    <string name="app_name">Mobile Yard</string>

    <string name="nav_title_name">-Studio</string>
    <string name="nav_subtitle_mail">-@android.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>

    <!-- Login And Reg -->
    <string name="entry_header">Entry</string>
    <string name="entry_desc">Entry</string>
    <string name="entry_or">-- or --</string>
    <string name="entry_login">Login</string>
    <string name="entry_reg">Register</string>
    <string name="reg_acc">Create Account</string>

    <string name="reg_firstname">Firstname</string>
    <string name="reg_lastname">Lastname</string>
    <string name="reg_pass">Password</string>
    <string name="reg_mail">E-mail</string>
    <string name="reg_username">Username</string>

    <!-- First Load Page -->
    <string name="slogan">Make you yard comfortable</string> <!-- Not used -->
    <string name="powered_by">Powered by CatX</string>

    <!-- Buttons -->
    <string name="let_get_started">Let get Started</string>
    <string name="next">Next</string>
    <string name="skip_btn">Skip</string>

    <!-- Onboarding Page -->
    <string name="first_slide_title">Mobility and Convenience</string>
    <string name="second_slide_title">Creativity</string>
    <string name="third_slide_title">Profit</string>

    <string name="first_slide_desc">Create a yard project right on your phone!</string>
    <string name="second_slide_desc">Choose from a wide variety of elements to create your perfect yard</string>
    <string name="third_slide_desc">Upgrade your yard with other users</string>

    <!-- User Dashboard -->
    <string name="user_dashboard_header">Mobile Yard</string>
    <string name="user_dashboard_search">Search...</string>

    <!-- User Dashboard Yards -->
    <string name="yards_name">Yard Name</string>
    <string name="yards_title">Yard Title</string>
    <string name="yards_desc">Yard Desc</string>
    <string name="yards_id">Yard ID</string>

    <!-- Navigation Menu -->
    <string name="nav_home">Home</string>
    <string name="nav_add">Add Yard</string>
    <string name="nav_search">Search</string>

    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_profile">Profile</string>

    <string name="nav_inv">Share with friends</string>
    <string name="nav_rep">Report</string>
    <string name="nav_faq">FAQ</string>

    <!-- Yard Menu -->
    <string name="yard_info_header">Yard Info</string>
    <string name="yard_info_id">Yard ID</string>
    <string name="yard_info_name">Yard Name</string>
    <string name="yard_info_desc">Description</string>
    <string name="yard_info_longitude">Longitude</string>
    <string name="yard_info_latitude">Latitude</string>

    <string name="yard_info_button">Go to Edit</string>

    <!-- Create Yard Menu -->
    <string name="yard_create_header">Create Yard</string>
    <string name="yard_create_id">Yard ID</string>
    <string name="yard_create_name">Name of Yard</string>
    <string name="yard_create_desc">Description</string>
    <string name="yard_create_longitude">Longitude</string>
    <string name="yard_create_latitude">Latitude</string>
    <string name="yard_create_height">Height</string>
    <string name="yard_create_weight">Weight</string>


    <string name="share_app">Hi!\n\nMobile Yard is a convenient app for improving your yard. Because of it, there are great improvements in my yard.\n\nDownload it for free https://github.com/MrCodeFan/MobYardAndroid.git</string>

    <!-- Profile -->
    <string name="profile_header">User Profile</string>
    <string name="profile_id">User ID</string>
    <string name="profile_firstname">Firstname</string>
    <string name="profile_lastname">Lastname</string>
    <string name="profile_mail">E-mail</string>
    <string name="profile_username">Username</string>
    <string name="profile_desc">Description of user</string>


</resources>