<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="auth.StartActivity"
    android:padding="30dp"
    android:background="@color/mainLightMilk">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_marginTop="100dp"
        android:text="@string/entry_login"
        android:background="@color/mainDarkMilk"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/entry_or"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/entry_reg"
        android:background="@color/mainDarkMilk"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/start_page_pic">

    </ImageView>



</LinearLayout>