<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".load.OnboardingActivity"
    android:background="@color/mainLightMilk">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/yard_create_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/yard_create_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yard_create_header"
            android:textSize="24sp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/yard_create_id"
                    android:textSize="22dp"/>

                <TextView
                    android:id="@+id/yard_create_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="ID"
                    android:textSize="20dp"
                    />

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/yard_create_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/yard_create_name"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/yard_create_weight"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/yard_create_weight"
                    android:padding="15dp"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:text="|"
                    android:gravity="center"
                    android:textSize="35dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/yard_create_height"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/yard_create_height"
                    android:padding="15dp"
                    android:inputType="numberDecimal"/>

            </LinearLayout>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/yard_create_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/yard_create_desc"
                android:padding="15dp" />
        </LinearLayout>


        <Button
            android:id="@+id/yard_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="30dp"

            android:background="#00000000"
            android:drawableEnd="@drawable/next"
            />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>