<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="410dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/yard_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/yard_pic_template"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/yard_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_grotesque_black"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/yards_name"
            android:textSize="30sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/yard_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginEnd="170dp"
            android:textSize="12sp"
            android:text="@string/yards_id"
            app:layout_constraintTop_toBottomOf="@+id/yard_heading"/>

        <TextView
            android:id="@+id/yard_desc"
            android:layout_width="362dp"
            android:layout_height="93dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/yards_title"
            app:layout_constraintTop_toBottomOf="@+id/yard_id" />

        <TextView
            android:id="@+id/yard_num"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:gravity="right"
            android:text="1"/>
    </LinearLayout>





</androidx.cardview.widget.CardView>