<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ProfileActivity"
    android:orientation="vertical"
    android:background="@color/mainLightMilk"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/profile_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_header"
            android:textSize="24sp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/profile_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="@dimen/profile_title"
                        android:layout_height="match_parent"
                        android:text="@string/profile_firstname"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/profile_firstname_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    >
                    <TextView
                        android:layout_width="@dimen/profile_title"
                        android:layout_height="match_parent"
                        android:text="@string/profile_lastname"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/profile_lastname_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="@dimen/profile_title"
                        android:layout_height="match_parent"
                        android:text="@string/profile_username"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/profile_username_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="@dimen/profile_title"
                        android:layout_height="match_parent"
                        android:text="@string/profile_mail"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/profile_mail_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/prifile_desc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="@dimen/profile_title"
                        android:layout_height="match_parent"
                        android:text="@string/profile_desc"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/prifile_desc_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_images_yards"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_toRightOf="@+id/info_edit_btn">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>